--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.1",
     "graphql": "^16.9.0",
